# light-maps

./: .gitignore  Cargo.toml  PLAN.md  README.md
crates/lm-bake/: Cargo.toml
crates/lm-bake/src/: error.rs  estimate.rs  feature_store.rs  ingest.rs  interactive.rs  lib.rs  main.rs  manifest.rs  pipeline.rs  prepare.rs  reproject.rs  simplify.rs  streaming.rs  tile_clip.rs  tile_encode.rs
crates/lm-bake/src/formats/: csv.rs  geojsonseq.rs  mbtiles.rs  mod.rs  shapefile.rs
crates/lm-bake/tests/: bake_integration.rs  step_c_integration.rs  streaming_integration.rs
crates/lm-core/: Cargo.toml
crates/lm-core/benches/: tile_lookup.rs
crates/lm-core/src/: fixture.rs  inspect.rs  lib.rs  pmtiles.rs  tile_id.rs  tile_writer.rs  writer.rs
crates/lm-core/tests/: reader_integration.rs
crates/lm-example/: Cargo.toml
crates/lm-example/src/: main.rs
crates/lm-serve/: Cargo.toml
crates/lm-serve/src/: auth.rs  config.rs  lib.rs  main.rs  metrics_handler.rs  server.rs
crates/lm-serve/tests/: serve_integration.rs
deploy/: Dockerfile  light-maps.service
fixtures/: natural_earth.pmtiles
memory/: feedback_wsl_commands.md
web/: index.html  light-maps.js
wiki/: baking.md  deployment.md  maplibre.md  serving.md
