[workspace]
members = [
    "crates/lm-core",
    "crates/lm-serve",
    "crates/lm-bake",
    "crates/lm-example",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit", "request-id", "sensitive-headers"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
geo = "0.29"
geo-types = "0.7"
geojson = "0.24"
geozero = { version = "0.15", features = ["with-mvt", "with-geojson", "with-geo"] }
rayon = "1"
brotli = "8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
