[package]
name = "lm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
memmap2 = "0.9"
flate2 = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
serde_json = "1"

[[bench]]
name = "tile_lookup"
harness = false
