[package]
name = "lm-example"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lm-example"
path = "src/main.rs"

[dependencies]
lm-bake = { path = "../lm-bake" }
lm-serve = { path = "../lm-serve" }
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
