[package]
name = "lm-serve"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "lm_serve"
path = "src/lib.rs"

[[bin]]
name = "lm-serve"
path = "src/main.rs"

[dependencies]
lm-core = { path = "../lm-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }

[dev-dependencies]
tempfile = "3"
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
